<resources>
    <string name="app_name">TugasUI</string>
    <string name="daftar_dengan_nomor_handphone">Daftar dengan nomor handphone</string>
    <string name="welcome_to_mysport">Welcome to MySport</string>
    <string name="todo">TODO</string>
    <string name="daftar_dengan_google">Daftar dengan Google</string>
    <string name="sudah_punya_akun_masuk_disini">Sudah punya akun? masuk disini</string>
    <string name="masukkan_nomor_handphone_aktif_untuk_masuk">Masukkan nomor handphone aktif untuk masuk</string>
    <string name="_62">+62</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="masuk">Masuk</string>
    <string name="pelayanan_kesehatan_apa_yang_sedang_anda_cari">Pelayanan kesehatan Apa Yang Ingin Anda Cari?</string>
    <string name="tenang_kami_bantu_carikan">Tenang, Kami Bantu Carikan</string>
    <string name="search_icon">Search Icon</string>
    <string name="temukan_layanan_kesehatan">Temukan layanan kesehatan</string>
    <string name="start">START</string>
    <string name="rumah_sakit">RUMAH SAKIT</string>
    <string name="klinik">KLINIK</string>
    <string name="rumah_sakit_sari_asih_ciledug">Rumah Sakit Sari Asih Ciledug</string>
    <string name="jl_hos_cokroaminoto_no_38_rt_001_rw_005_sudimara_timur_kec_ciledug_kota_tangerang_banten">Jl. HOS Cokroaminoto No.38, RT.001/RW.005, Sudimara Timur, Kec. Ciledug, Kota Tangerang, Banten</string>
    <string name="todo1">TODO</string>
    <string name="detail">Detail</string>
    <string name="nomer_telephone">Nomer Telephone</string>
    <string name="_6282335663421">+6282335663421</string>
    <string name="todo2">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="ke_lokasi_sekarang">Ke Lokasi Sekarang</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="selamat_datang_di_sirs">Selamat Datang Di SIRS</string>
    <string name="kami_akan_membantumu_mencarikan_pelayanan_kesehatan_yang_terdekat_dan_terbaik_untukmu">Kami akan membantumu mencarikan pelayanan kesehatan yang terdekat dan terbaik untukmu</string>
    <string name="akun">Akun</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="klinik_insan_permata">Klinik Insan Permata</string>
    <string name="jl_jombang_raya_no_17_pd_aren_kec_pd_aren_kota_tangerang_selatan_banten">Jl. Jombang Raya No.17, Pd. Aren, Kec. Pd. Aren, Kota Tangerang Selatan, Banten</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>