<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <!-- Instruction Text -->
        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:text="@string/masukkan_nomor_handphone_aktif_untuk_masuk"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Phone number input with country code -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="#E0E5E5">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/flag" />


            <!-- Country Code (+62) -->
            <TextView
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_62"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <!-- Phone Number Input -->
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/nomor_handphone"
                android:inputType="phone"
                android:padding="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Masuk Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/black"
            android:enabled="false"
            android:text="@string/masuk"
            android:textColor="@android:color/white"
            android:textSize="16sp" /> <!-- Disabled initially -->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>